<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/what_is_your_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:focusable="true"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/what_is_your_gender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/gender_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="12dp"
                android:text="@string/what_is_your_dob"
                android:textSize="18sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDOB"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp">

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob_hint"
                        android:imeOptions="actionNext"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/estyr"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_datepicker"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_date"
                    android:onClick="showDatePicker" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:text="@string/where_are_you_from"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/stateSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:entries="@array/india_states"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutcityName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/cityName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/city_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/colorPrimaryDark"
            android:paddingHorizontal="20dp"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
